[package]
name = "strobe-rs"
repository = "https://github.com/rozbb/strobe-rs"
documentation = "https://docs.rs/strobe-rs"
description = "An implementation of the Strobe protocol framework in pure Rust"
readme = "README.md"
version = "0.6.2"
edition = "2018"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
license = "MIT/Apache-2.0"
keywords = ["crypto", "strobe", "protocol", "framework", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = []
std = []
serialize_secret_state = ["serde", "serde-big-array"]

[dependencies]
bitflags = "1.2"
byteorder = { version = "1.3", default-features = false }
keccak = "0.1"
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
serde-big-array = { version = "0.3", optional = true }
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Criteron benches
[[bench]]
name = "benches"
harness = false
