[package]
name = "strobe-rs"
repository = "https://github.com/rozbb/strobe-rs"
documentation = "https://docs.rs/strobe-rs"
description = "An implementation of the Strobe protocol framework in pure Rust"
readme = "README.md"
version = "0.10.0"
edition = "2021"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
license = "MIT/Apache-2.0"
keywords = ["crypto", "strobe", "protocol", "framework", "no_std"]
categories = ["cryptography", "no-std"]
rust-version = "1.81"

[features]
default = []
std = []
asm = ["keccak/asm"]
serialize_secret_state = ["serde", "serde-big-array"]

[dependencies]
bitflags = "2.10"
bitflags-serde-legacy = "0.1.1"
byteorder = { version = "1.5", default-features = false }
keccak = "0.1.5"
serde = { version = "1.0.210", optional = true, default-features = false, features = [
    "derive",
] }
serde-big-array = { version = "0.4", optional = true }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
rand = "0.8.5"
serde_json = "1"

# Criteron benches
[[bench]]
name = "benches"
harness = false

# Tell docs.rs to build docs with `--all-features` and `--cfg docsrs` (for nightly docs features)
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
